# magic.common

./: .gitmodules  CMakeLists.txt
3ndparty/: CMakeLists.txt
interfaces/: CMakeLists.txt
interfaces/component/: CMakeLists.txt
interfaces/component/include/common/interfaces/: component.hh
interfaces/component/src/: component.cc
interfaces/logging/: CMakeLists.txt
interfaces/logging/include/common/interfaces/: logging.hh
interfaces/logging/src/: logging.cc
libs/: CMakeLists.txt
libs/common/: CMakeLists.txt
libs/common/include/common/: common.hh
libs/common/src/: common.cc
libs/comms/: CMakeLists.txt
libs/component_base/: CMakeLists.txt
libs/component_base/include/common/: component_application.hh
libs/component_base/src/: component_application.cc
libs/devicemanager/: CMakeLists.txt
libs/devicemanager/include/common/: devicemanager.hh
libs/devicemanager/src/: devicemanager.cc
libs/service_base/: CMakeLists.txt
